--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "This assignment will help you stand up a web API using Express and the module that you produced for a03.",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node server.js --port=5555"
   },
   "repository": {
     "type": "git",
